--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
     *{box-sizing:border-box;margin:0;padding:0}
     body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,sans-serif;background:var(--bg);color:#111}
 
-    header,footer{background:#000;color:#fff;text-align:center;padding:16px}
-    header img{max-height:56px}
+    /* MODIF: padding + marge autour du logo */
+    header,footer{background:#000;color:#fff;text-align:center;padding:28px}
+
+    /* MODIF: logo plus grand */
+    header img{max-height:90px}
 
     nav{display:flex;gap:16px;justify-content:center;padding:10px;border-bottom:1px solid var(--border)}
     nav a{color:#333;text-decoration:none;font-weight:600;font-size:15px}
