--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
       --success:#16a34a;
     }
     *{box-sizing:border-box;margin:0;padding:0}
+    html{scroll-behavior:smooth;}
     body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,sans-serif;background:var(--bg);color:#111}
 
-    /* MODIF: padding + marge autour du logo */
     header,footer{background:#000;color:#fff;text-align:center;padding:28px}
-
-    /* MODIF: logo plus grand */
     header img{max-height:90px}
 
     nav{display:flex;gap:16px;justify-content:center;padding:10px;border-bottom:1px solid var(--border)}
@@ -44,35 +42,31 @@
     .hero-text h2{font-size:26px;font-weight:700;margin-bottom:4px}
     .hero-text p{font-size:15px;color:var(--muted)}
 
+    /* Bouton principal large */
+    .main-button{display:flex;justify-content:center;margin-bottom:20px;}
+    .btn-main{
+      background:var(--brand);color:#fff;font-weight:700;font-size:17px;
+      border:none;border-radius:999px;padding:16px 40px;width:100%;max-width:520px;
+      text-align:center;text-decoration:none;transition:.25s;
+    }
+    .btn-main:hover{opacity:.9;transform:translateY(-2px);}
+
+    /* Boutons de contact alignés */
     .buttons{
-      display:flex;
-      justify-content:center;
-      gap:16px;
-      flex-wrap:wrap;
-      margin-top:20px;
-      margin-bottom:24px;
+      display:flex;justify-content:center;align-items:center;gap:12px;
+      flex-wrap:nowrap;margin-top:20px;margin-bottom:24px;overflow-x:auto;padding-bottom:4px;
     }
     .btn{
-      flex:1 1 200px;
-      max-width:220px;
-      border:1px solid var(--brand);
-      background:var(--brand);
-      color:#fff;
-      border-radius:999px;
-      padding:12px 20px;
-      font-weight:600;
-      text-decoration:none;
-      text-align:center;
-      transition:.25s;
+      flex:1 1 auto;min-width:120px;max-width:220px;border:1px solid var(--brand);
+      background:var(--brand);color:#fff;border-radius:999px;padding:12px 20px;
+      font-weight:600;text-decoration:none;text-align:center;transition:.25s;white-space:nowrap;
     }
     .btn:hover{opacity:.9;transform:translateY(-1px)}
     .btn:disabled{opacity:0.6;cursor:not-allowed}
 
     .fare-sticky{
-      position:sticky;top:8px;z-index:5;
-      background:#0a0a0a;color:#fff;border-radius:14px;
-      padding:14px 16px;margin-bottom:20px;display:none;
-      box-shadow:0 10px 24px rgba(0,0,0,.25);
+      position:sticky;top:8px;z-index:5;background:#0a0a0a;color:#fff;border-radius:14px;
+      padding:14px 16px;margin-bottom:20px;display:none;box-shadow:0 10px 24px rgba(0,0,0,.25);
     }
     .fare-row{display:flex;align-items:center;justify-content:space-between;gap:12px}
     .fare-left{display:flex;align-items:center;gap:10px}
@@ -83,15 +77,10 @@
 
     form label{display:block;font-size:14px;font-weight:600;margin-bottom:6px;margin-top:12px}
     input,select,textarea{
-      width:100%;padding:14px 12px;
-      border:1px solid var(--border);
-      border-radius:12px;background:#f9f9f9;
-      font-size:16px;
-      transition:border .2s,background .2s;
+      width:100%;padding:14px 12px;border:1px solid var(--border);border-radius:12px;background:#f9f9f9;
+      font-size:16px;transition:border .2s,background .2s;
     }
-    input:focus,select:focus,textarea:focus{
-      outline:none;border-color:var(--brand);background:#fff;
-    }
+    input:focus,select:focus,textarea:focus{outline:none;border-color:var(--brand);background:#fff;}
     textarea{min-height:64px;resize:none}
 
     #map{height:320px;border-radius:14px;margin-top:20px}
@@ -106,20 +95,31 @@
     footer{font-size:13px;padding:20px}
 
     .success-message{
-      background:#ecfdf5;
-      border:1px solid #bbf7d0;
-      color:var(--success);
-      padding:14px 16px;
-      border-radius:12px;
-      font-weight:600;
-      text-align:center;
-      margin-top:20px;
+      background:#ecfdf5;border:1px solid #bbf7d0;color:var(--success);
+      padding:14px 16px;border-radius:12px;font-weight:600;text-align:center;margin-top:20px;
       animation:fadeUp .4s ease-out;
     }
 
     @media (max-width:560px){
       .fare-price{font-size:28px}
       .hero-text h2{font-size:22px}
+    }
+
+    /* --- CTA mobile fixe (Variante B — barre translucide) --- */
+    @media (max-width:640px){
+      body{ padding-bottom:72px; }
+      .sticky-cta.glass{
+        position:fixed; left:0; right:0; bottom:0; z-index:50;
+        display:flex; justify-content:center; padding:10px 14px;
+        padding-bottom:calc(10px + env(safe-area-inset-bottom));
+        background:rgba(255,255,255,.75); backdrop-filter:blur(10px);
+        border-top:1px solid rgba(0,0,0,.06);
+      }
+      .sticky-cta.glass .btn-cta{
+        background:#111; color:#fff; border-radius:12px; width:100%; max-width:420px;
+        padding:14px 18px; font-weight:800; text-align:center;
+        box-shadow:0 8px 24px rgba(0,0,0,.15);
+      }
     }
   </style>
 </head>
@@ -140,6 +140,11 @@
     <div class="hero-text">
       <h2>Chauffeur privé à Perpignan</h2>
       <p>Réservez en quelques secondes — confort et fiabilité.</p>
+    </div>
+
+    <!-- Bouton principal -->
+    <div class="main-button">
+      <a class="btn btn-main" href="#formResa" onclick="trackEvent('clic_reserver','Réserver maintenant')">📅 Réservez maintenant</a>
     </div>
 
     <div class="buttons">
@@ -201,7 +206,6 @@
     </form>
 
     <div id="successBox"></div>
-
     <div id="map"></div>
 
     <div class="contact-section">
@@ -213,87 +217,57 @@
 
   <footer>© 2025 OuassVTC - Tous droits réservés.</footer>
 
+  <!-- CTA mobile fixe -->
+  <div class="sticky-cta glass">
+    <a class="btn-cta" href="#formResa" onclick="trackEvent('cta_mobile','Réserver maintenant (mobile)')">📅 Réservez maintenant</a>
+  </div>
+
   <!-- EmailJS -->
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
     emailjs.init("U08QGWWRUenJDOllc");
     let formEnvoye = false;
-
     async function sendEmail(e){
       e.preventDefault();
-
-      if(formEnvoye){
-        alert("Votre demande a déjà été envoyée.");
-        return;
-      }
-      formEnvoye = true;
-      const btn = document.getElementById("btnSubmit");
-      btn.disabled = true;
-
-      const calc = await calculerEstimation();
-
-      let prixStr = "";
-      if (calc && Number.isFinite(calc.prix)) {
-        prixStr = `${calc.prix.toFixed(2)} €`;
-      } else {
-        prixStr = document.getElementById("prixAffiche").textContent || "";
-      }
-
-      const params = {
-        nom: nom.value,
-        telephone: telephone.value,
-        depart: depart.value,
-        arrivee: arrivee.value,
-        dateheure: dateheure.value,
-        passagers: passagers.value,
-        paiement: paiement.value,
-        message: message.value,
-        prix: prixStr
-      };
-
+      if(formEnvoye){alert("Votre demande a déjà été envoyée.");return;}
+      formEnvoye = true; const btn=document.getElementById("btnSubmit"); btn.disabled=true;
+      const calc=await calculerEstimation();
+      let prixStr=""; prixStr = (calc && Number.isFinite(calc.prix)) ? `${calc.prix.toFixed(2)} €` : document.getElementById("prixAffiche").textContent || "";
+      const params={nom:nom.value,telephone:telephone.value,depart:depart.value,arrivee:arrivee.value,dateheure:dateheure.value,passagers:passagers.value,paiement:paiement.value,message:message.value,prix:prixStr};
       try{
         await emailjs.send("service_kdvgh9f","template_5xt5vlv",params);
         document.getElementById("formResa").reset();
-        document.getElementById("successBox").innerHTML =
-          '<div class="success-message">✅ Formulaire bien envoyé. Nous revenons vers vous rapidement !</div>';
+        document.getElementById("successBox").innerHTML='<div class="success-message">✅ Formulaire bien envoyé. Nous revenons vers vous rapidement !</div>';
       }catch(err){
-        alert("❌ Erreur. Réessayez.");
-        formEnvoye = false;
-        btn.disabled = false;
+        alert("❌ Erreur. Réessayez."); formEnvoye=false; btn.disabled=false;
       }
     }
 
     function calculerEstimation(){
-      return new Promise((resolve) => {
-        const d = depart.value, a = arrivee.value;
-        const wrap=document.getElementById("fare"),
-              priceEl=document.getElementById("prixAffiche"),
-              detEl=document.getElementById("detailsTrajet");
-
-        if(!d||!a){ resolve(null); return; }
-
+      return new Promise((resolve)=>{
+        const d=depart.value,a=arrivee.value;
+        const wrap=document.getElementById("fare"),priceEl=document.getElementById("prixAffiche"),detEl=document.getElementById("detailsTrajet");
+        if(!d||!a){resolve(null);return;}
         directionsService.route({origin:d,destination:a,travelMode:google.maps.TravelMode.DRIVING},
-          (result,status)=>{
-            if(status==="OK"){
-              directionsRenderer.setDirections(result);
-              const leg=result.routes[0].legs[0];
-              const distKm=leg.distance.value/1000;
-              const duree=leg.duration.text;
-              const prix=+(20+Math.max(0,distKm-7)*1.6).toFixed(2);
-
-              animatePrice(priceEl,prix);
-              priceEl.classList.remove("pop");void priceEl.offsetWidth;priceEl.classList.add("pop");
-              detEl.textContent=`Distance : ${distKm.toFixed(1)} km · Temps : ${duree}`;
-              wrap.classList.add("show");
-              resolve({prix,distKm,duree});
-            }else{
-              priceEl.textContent="Estimation indisponible";
-              detEl.textContent="";
-              wrap.classList.add("show");
-              resolve(null);
-            }
+        (result,status)=>{
+          if(status==="OK"){
+            directionsRenderer.setDirections(result);
+            const leg=result.routes[0].legs[0];
+            const distKm=leg.distance.value/1000;
+            const duree=leg.duration.text;
+            const prix=+(20+Math.max(0,distKm-7)*1.6).toFixed(2);
+            animatePrice(priceEl,prix);
+            priceEl.classList.remove("pop");void priceEl.offsetWidth;priceEl.classList.add("pop");
+            detEl.textContent=`Distance : ${distKm.toFixed(1)} km · Temps : ${duree}`;
+            wrap.classList.add("show");
+            resolve({prix,distKm,duree});
+          }else{
+            priceEl.textContent="Estimation indisponible";
+            detEl.textContent="";
+            wrap.classList.add("show");
+            resolve(null);
           }
-        );
+        });
       });
     }
 
@@ -306,11 +280,9 @@
       })(start);
     }
 
-    let map, directionsService, directionsRenderer;
+    let map,directionsService,directionsRenderer;
     function initMap(){
-      map=new google.maps.Map(document.getElementById("map"),{
-        zoom:7,center:{lat:42.6887,lng:2.8948}
-      });
+      map=new google.maps.Map(document.getElementById("map"),{zoom:7,center:{lat:42.6887,lng:2.8948}});
       directionsService=new google.maps.DirectionsService();
       directionsRenderer=new google.maps.DirectionsRenderer({map});
       new google.maps.places.Autocomplete(document.getElementById("depart"));
@@ -318,7 +290,7 @@
     }
   </script>
 
-  <!-- Google Maps API -->
+  <!-- Google Maps -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxEs2za_iEs5okAbU3H9fvJm0sRm0oG-A&callback=initMap&libraries=places&loading=async" async defer></script>
 </body>
 </html>
