--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
       <!-- Boutons du formulaire (verticaux) -->
       <div class="form-buttons">
-        <button type="button" class="btn" onclick="calculerEstimation()">📏 Estimer le tarif</button>
+        <button type="button" class="btn" onclick="calculerEstimation()">💶 Estimer le tarif</button>
         <button type="submit" class="btn" id="btnSubmit">✅ Envoyer votre formulaire</button>
       </div>
     </form>
